--- a/3.MEDIA AND FORM ASSIGNMENT/QUESTION 5.html
+++ b/3.MEDIA AND FORM ASSIGNMENT/QUESTION 5.html
@@ -22,9 +22,11 @@
 		</section>
 <section class="rover">
    <form>
-		<label for="firstName">First Name:
+   <fieldset>
+   	<legend><H1>QUESTION 5 A</H1></legend>
+   	<label for="firstName">First Name:
 			<input type="text" name="firstName" placeholder="DURGESH " id="firstName" required
-			minlength=100 max=20 />
+			minlength=3 max=20 />
 			</label>
 			<br><br>
 		<label for="lastName">Last Name:
@@ -64,7 +66,35 @@
 		</label>
 			<br><br>
 		<button type="submit" style="background-color: lightblue"><strong>SUBMIT</strong></button>
+   </fieldset>
+		
    		</form>
 	</section>
+
+
+
+<!-- QUESTION 5 B -->
+
+	<section class="rover">
+<form>		
+	<fieldset>
+		<legend><h1>Question 5 b</h1></legend>
+		<label for="email">Email:
+			<input type="email" name="email" placeholder="durgeshmishra53804@gmail.com" id="email" required />
+		</label>
+			<br><br>
+		<label for="password">Password:
+			<input type="password" name="password" placeholder="********" id="password" required
+			min=8 />
+		</label><br><br>
+
+		<input type="submit" style="background: lightblue">
+
+	</fieldset>
+		
+</form>
+
+	</section>
+	
 </body>
 </html>
